Fixed presentation of long product option descriptions in product page - they were not wrapped in separate lines causing the layout to break

--- a/public/stylesheet/frontend/Frontend.css
+++ b/public/stylesheet/frontend/Frontend.css
@@ -1145,6 +1145,8 @@ ul.productList .orderingControls
 .productOptions .description
 {
 	font-size: 0.85em;
+	white-space: normal;
+	width: 250px;
 }
 
 .nonEditableOption
